--- a/view/view.html
+++ b/view/view.html
@@ -3,23 +3,11 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Utiliser des API</title>
+    <title> </title>
 </head>
 
 <body>
-    <h1>Derniers articles</h1>
-    <div id="articles">
-    </div>
-
-    <h1>Le Premier Ministre</h1>
-    <div id="premMin">
-    </div>
-
-    <h1>La météo à Lyon</h1>
-    <div id="meteo"></div>
-
-    <script src="app/controllers/Produits.controller.js"></script>
-    
+   
 </body>
 
 </html>
